--- a/packages/spindle-ui/src/LinkButton/LinkButton.css
+++ b/packages/spindle-ui/src/LinkButton/LinkButton.css
@@ -1,5 +1,44 @@
 /*
  * LinkButton
+ * NOTE: Styles can be overridden with "--LinkButton-*" variables
+*/
+:root {
+  --LinkButton-tapHighlightColor: var(--gray-5-alpha);
+  --LinkButton-transitionDuration: 0.3s;
+  --LinkButton-onDisabled-opacity: 0.3;
+  --LinkButton-onFocus-boxShadow: 0 0 0 1px var(--color-surface-primary),
+    0 0 0 3px var(--color-focus-clarity);
+
+  --LinkButton--contained-backgroundColor: var(--color-surface-accent-primary);
+  --LinkButton--contained-color: var(--color-text-high-emphasis-inverse);
+  --LinkButton--contained-onActive-backgroundColor: var(--primary-green-100);
+  --LinkButton--contained-onHover-backgroundColor: var(--primary-green-100);
+
+  --LinkButton--outlined-borderColor: var(--color-surface-accent-primary);
+  --LinkButton--outlined-color: var(--color-surface-accent-primary);
+  --LinkButton--outlined-onActive-backgroundColor: var(--primary-green-5);
+  --LinkButton--outlined-onHover-backgroundColor: var(--primary-green-5);
+
+  --LinkButton--lighted-backgroundColor: var(
+    --color-surface-accent-primary-light
+  );
+  --LinkButton--lighted-color: var(--color-text-accent-primary);
+  --LinkButton--lighted-onActive-backgroundColor: var(--primary-green-10);
+  --LinkButton--lighted-onHover-backgroundColor: var(--primary-green-10);
+
+  --LinkButton--neutral-backgroundColor: var(--color-surface-tertiary);
+  --LinkButton--neutral-color: var(--color-text-medium-emphasis);
+  --LinkButton--neutral-onActive-backgroundColor: var(--gray-20-alpha);
+  --LinkButton--neutral-onHover-backgroundColor: var(--gray-20-alpha);
+
+  --LinkButton--danger-borderColor: var(--color-text-caution);
+  --LinkButton--danger-color: var(--color-text-caution);
+  --LinkButton--danger-onActive-backgroundColor: var(--caution-red-5-alpha);
+  --LinkButton--danger-onHover-backgroundColor: var(--caution-red-5-alpha);
+}
+
+/*
+ * LinkButton
 */
 .spui-LinkButton {
   align-items: center;
@@ -10,16 +49,15 @@
   justify-content: center;
   line-height: 1.3;
   outline: none;
-  -webkit-tap-highlight-color: var(--gray-5-alpha);
+  -webkit-tap-highlight-color: var(--LinkButton-tapHighlightColor);
   text-align: center;
   text-decoration: none;
-  transition: background-color 0.3s;
+  transition: background-color var(--LinkButton-transitionDuration);
 }
 
 .spui-LinkButton:focus,
 .spui-LinkButton:focus-visible {
-  box-shadow: 0 0 0 1px var(--color-surface-primary),
-    0 0 0 3px var(--color-focus-clarity);
+  box-shadow: var(--LinkButton-onFocus-boxShadow);
 }
 
 .spui-LinkButton:focus:not(:focus-visible) {
@@ -80,97 +118,97 @@
 */
 /* contained */
 .spui-LinkButton--contained {
-  background-color: var(--color-surface-accent-primary);
+  background-color: var(--LinkButton--contained-backgroundColor);
   border: none;
-  color: var(--color-text-high-emphasis-inverse);
+  color: var(--LinkButton--contained-color);
   /* Button variants have different vertical padding to normalize height */
   padding-bottom: 8px;
   padding-top: 8px;
 }
 
 .spui-LinkButton--contained:active {
-  background-color: var(--primary-green-100);
+  background-color: var(--LinkButton--contained-onActive-backgroundColor);
 }
 
 @media (hover: hover) {
   .spui-LinkButton--contained:hover {
-    background-color: var(--primary-green-100);
+    background-color: var(--LinkButton--contained-onHover-backgroundColor);
   }
 }
 
 /* outlined */
 .spui-LinkButton--outlined {
   background-color: transparent;
-  border: 2px solid var(--color-surface-accent-primary);
-  color: var(--color-surface-accent-primary);
+  border: 2px solid var(--LinkButton--outlined-borderColor);
+  color: var(--LinkButton--outlined-color);
   padding-bottom: 6px;
   padding-top: 6px;
 }
 
 .spui-LinkButton--outlined:active {
-  background-color: var(--primary-green-5);
+  background-color: var(--LinkButton--outlined-onActive-backgroundColor);
 }
 
 @media (hover: hover) {
   .spui-LinkButton--outlined:hover {
-    background-color: var(--primary-green-5);
+    background-color: var(--LinkButton--outlined-onHover-backgroundColor);
   }
 }
 
 /* lighted */
 .spui-LinkButton--lighted {
-  background-color: var(--color-surface-accent-primary-light);
+  background-color: var(--LinkButton--lighted-backgroundColor);
   border: none;
-  color: var(--color-text-accent-primary);
+  color: var(--LinkButton--lighted-color);
   padding-bottom: 8px;
   padding-top: 8px;
 }
 
 .spui-LinkButton--lighted:active {
-  background-color: var(--primary-green-10);
+  background-color: var(--LinkButton--lighted-onActive-backgroundColor);
 }
 
 @media (hover: hover) {
   .spui-LinkButton--lighted:hover {
-    background-color: var(--primary-green-10);
+    background-color: var(--LinkButton--lighted-onHover-backgroundColor0);
   }
 }
 
 /* neutral */
 .spui-LinkButton--neutral {
-  background-color: var(--color-surface-tertiary);
+  background-color: var(--LinkButton--neutral-backgroundColor);
   border: none;
-  color: var(--color-text-medium-emphasis);
+  color: var(--LinkButton--neutral-color);
   padding-bottom: 8px;
   padding-top: 8px;
 }
 
 .spui-LinkButton--neutral:active {
-  background-color: var(--gray-20-alpha);
+  background-color: var(--LinkButton--neutral-onActive-backgroundColor);
 }
 
 @media (hover: hover) {
   .spui-LinkButton--neutral:hover {
-    background-color: var(--gray-20-alpha);
+    background-color: var(--LinkButton--neutral-onHover-backgroundColor);
   }
 }
 
 /* danger */
 .spui-LinkButton--danger {
   background-color: transparent;
-  border: 2px solid var(--color-text-caution);
-  color: var(--color-text-caution);
+  border: 2px solid var(--LinkButton--danger-borderColor);
+  color: var(--LinkButton--danger-color);
   padding-bottom: 6px;
   padding-top: 6px;
 }
 
 .spui-LinkButton--danger:active {
-  background-color: var(--caution-red-5-alpha);
+  background-color: var(--LinkButton--danger-onActive-backgroundColor);
 }
 
 @media (hover: hover) {
   .spui-LinkButton--danger:hover {
-    background-color: var(--caution-red-5-alpha);
+    background-color: var(--LinkButton--danger-onHover-backgroundColor);
   }
 }
 
