feat(spindle-ui): add HeroCarousel component
Co-authored-by: keiya01 <keiya.s.0210@gmail.com>
Co-authored-by: takami-shunsuke <takami_shunsuke@cyberagent.co.jp>

--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -3,6 +3,7 @@
 @import './Button/Button.css';
 @import './ButtonGroup/ButtonGroup.css';
 @import './Form/index.css';
+@import './HeroCarousel/HeroCarousel.css';
 @import './IconButton/IconButton.css';
 @import './LinkButton/LinkButton.css';
 @import './Toast/Toast.css';
