--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -1,5 +1,6 @@
 /* stylelint-disable plugin/selector-bem-pattern */
 @import 'ameba-color-palette.css';
+@import './Breadcrumb/Breadcrumb.css';
 @import './Button/Button.css';
 @import './ButtonGroup/ButtonGroup.css';
 @import './Form/index.css';
