--- a/packages/spindle-ui/src/Breadcrumb/Breadcrumb.css
+++ b/packages/spindle-ui/src/Breadcrumb/Breadcrumb.css
@@ -5,7 +5,8 @@
   background: var(--color-surface-secondary);
   border-radius: 70px;
   display: inline-block;
-  padding: 0 12px;
+  overflow: hidden;
+  padding: 0 16px;
 }
 
 .spui-Breadcrumb-list {
@@ -19,6 +20,7 @@
 .spui-Breadcrumb-item {
   align-items: center;
   display: flex;
+  min-height: 56px;
 }
 
 /* stylelint-disable plugin/selector-bem-pattern */
@@ -27,14 +29,25 @@
   display: flex;
   letter-spacing: 0.1em;
   line-height: 1.3;
-  min-height: 56px;
-  padding: 0 12px;
+  padding: 4px 8px;
+  position: relative;
 }
 
 .spui-Breadcrumb a[href] {
+  border-radius: 4px;
   color: var(--color-text-accent-primary);
   font-weight: bold;
   text-decoration: none;
+}
+
+.spui-Breadcrumb a[href]::before {
+  border-radius: 4px;
+  content: '';
+  height: 56px;
+  left: 0;
+  position: absolute;
+  top: -50%;
+  width: 100%;
 }
 
 .spui-Breadcrumb a[href]:hover {
@@ -45,11 +58,22 @@
   color: var(--color-text-low-emphasis);
   font-weight: normal;
 }
+
+.spui-Breadcrumb a:focus {
+  box-shadow: 0 0 0 1px var(--color-surface-secondary),
+    0 0 0 3px var(--color-focus-clarity);
+  outline: none;
+}
+
+.spui-Breadcrumb a:focus:not(:focus-visible) {
+  box-shadow: none;
+}
 /* stylelint-enable plugin/selector-bem-pattern */
 
 .spui-Breadcrumb-chevron {
   color: var(--color-object-low-emphasis);
   height: 16px;
+  padding: 0 4px;
   width: 16px;
 }
 
@@ -60,19 +84,27 @@
 
 @media screen and (max-width: 375px) {
   .spui-Breadcrumb {
-    padding: 0 12px;
+    padding: 0 14px;
+  }
+
+  .spui-Breadcrumb-item {
+    min-height: 40px;
   }
 
   /* stylelint-disable plugin/selector-bem-pattern */
   .spui-Breadcrumb a {
     font-size: 0.8125em;
-    min-height: 40px;
-    padding: 0 8px;
+    padding: 2px 6px;
+  }
+
+  .spui-Breadcrumb a[href]::before {
+    height: 40px;
   }
   /* stylelint-enable plugin/selector-bem-pattern */
 
   .spui-Breadcrumb-chevron {
     height: 12px;
+    padding: 0 2px;
     width: 12px;
   }
 }
