--- a/packages/spindle-ui/src/Dialog/Dialog.css
+++ b/packages/spindle-ui/src/Dialog/Dialog.css
@@ -10,6 +10,17 @@
   width: calc(400px - 36px * 2);
 }
 
+/* stylelint-disable plugin/selector-bem-pattern */
+html:has(.spui-Dialog[open]) {
+  overflow: hidden;
+}
+
+/* Fallback for :has() */
+html.spui-Dialog--open {
+  overflow: hidden;
+}
+/* stylelint-enable plugin/selector-bem-pattern */
+
 /* 56px is the minimum margin for the small devices, 512px is from 400px + 56px * 2 */
 @media screen and (max-width: 512px) {
   .spui-Dialog {
