fix(spindle-ui): set default underline style to TextLink

--- a/packages/spindle-ui/src/TextLink/TextLink.css
+++ b/packages/spindle-ui/src/TextLink/TextLink.css
@@ -64,6 +64,10 @@
 /*
  * Underline management
 */
+.spui-TextLink {
+  text-decoration: underline;
+}
+
 .spui-TextLink--hasIcon,
 .spui-TextLink--underlinehover {
   text-decoration: none;
