--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -8,6 +8,7 @@
 @import './HeroCarousel/HeroCarousel.css';
 @import './IconButton/IconButton.css';
 @import './LinkButton/LinkButton.css';
+@import './Modal/index.css';
 @import './SubtleButton/SubtleButton.css';
 @import './TextLink/TextLink.css';
 @import './Toast/Toast.css';
