feat(spindle-ui): add pagination component

--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -16,3 +16,4 @@
 @import './SnackBar/SnackBar.css';
 @import './List/index.css';
 @import './DropdownMenu/DropdownMenu.css';
+@import './Pagination/Pagination.css';
