feat(spindle-ui): add SnackBar

--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -13,4 +13,5 @@
 @import './TextButton/TextButton.css';
 @import './TextLink/TextLink.css';
 @import './Toast/Toast.css';
+@import './SnackBar/SnackBar.css';
 @import './List/index.css';
