--- a/packages/spindle-ui/src/index.css
+++ b/packages/spindle-ui/src/index.css
@@ -15,3 +15,4 @@
 @import './Toast/Toast.css';
 @import './SnackBar/SnackBar.css';
 @import './List/index.css';
+@import './DropdownMenu/DropdownMenu.css';
